# lilbee

./: .gitignore  AGENTS.md  ANALYSIS.md  COMPETITORS.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  audit_litellm_backdoor.sh  demo.tape  kreuzberg-upstream-fixes.md  obsidian-plugin-plan.md  ollama-arch-nvidia.md  opencode.json  pyproject.toml  resume.sh  sesh.json  session-ses_2ec3.md  session.json  staging-flat-channels.json  todo.md
.beads/: metadata.json
.claude/: settings.json
.dolt/: sql-server.info
.dolt/.beads/: metadata.json
.dolt/beads/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.dolt/beads_bb/.dolt/noms/: journal.idx  manifest  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-wheels.yml  ci.yml  publish.yml  release.yml
.kreuzberg/extraction/: 331621d49e362d01865564a7fd30fb21_dbc493df744660dabc9ac2770bb0eb29.msgpack  3fba5250be9ac259c56e7250c526bc83_dbc493df744660dabc9ac2770bb0eb29.msgpack  41d91a2369e2f3a4ef6665217241c255_dbc493df744660dabc9ac2770bb0eb29.msgpack  50809fb533ea939d11f9e4d01099a882_dbc493df744660dabc9ac2770bb0eb29.msgpack  5df03eecc7bee40c21543fe92c69603f_dbc493df744660dabc9ac2770bb0eb29.msgpack  61017bd620d17d2acf4c9c1d69699be2_dbc493df744660dabc9ac2770bb0eb29.msgpack  8847d68d0a8843e4fe8d32071088e803_dbc493df744660dabc9ac2770bb0eb29.msgpack  8ce30bc7a0a2c6de72d8e3fc7bbf07f7_dbc493df744660dabc9ac2770bb0eb29.msgpack  a5e58b72c18ded751d5fd9ace125a476_dbc493df744660dabc9ac2770bb0eb29.msgpack  a6e7f93354fdbbc10c31e6f310a968b9_dbc493df744660dabc9ac2770bb0eb29.msgpack  ded35159e0ee8212dc6fe05c7845b102_dbc493df744660dabc9ac2770bb0eb29.msgpack
.test_lancedb/test_table.lance/_transactions/: 0-bbdb24d6-67aa-4674-b99e-c47db0270b7f.txn
beads/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
beads_bb/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
demos/: chat.tape  code-search.tape  download_progress_demo.py  godot-with-lilbee.tape  godot-without-lilbee.tape  json.tape  opencode.tape  top-speed.tape  verify_qwen3_4b_progress.py  vision-ocr.tape  xet_progress_demo.py
demos/godot-with-lilbee/: AGENTS.md  level_generator.gd  opencode.json  project.godot
demos/godot-without-lilbee/: AGENTS.md  level_generator.gd
docs/: agent-integration.md  architecture.md  demos.md  development.md  usage.md
docs/adr/: 0001-xdist-hang-root-causes.md  0002-rag-pipeline-silent-fallbacks.md  0003-ssrf-protection.md  0004-content-based-success-detection.md  0005-cross-platform-threading.md  0006-reasoning-tag-parsing.md  0007-tui-worker-testing-patterns.md  0008-revert-lessons.md
docs/benchmarks/: godot-level-generator.md  vision-ocr.md
docs/notes/: obsidian-plugin-parity.md  tui-plan.md
plugins/obsidian/: README.md  main.js
plugins/obsidian/coverage/: clover.xml  coverage-final.json
plugins/obsidian/src/: api.ts  main.ts  settings.ts  types.ts
plugins/obsidian/tests/: api.test.ts  main.test.ts  settings.test.ts  types.test.ts
scripts/: record_demo.py  vendor_llama_cpp.py
site/: index.html  style.css
src/lilbee/: __init__.py  __main__.py  _languages.py  _launcher.py  _splash.py  _splash_runner.py  api.py  catalog.py  chunk.py  chunker.py  citation.py  cli.py  clustering.py  clustering_embedding.py  code_chunker.py  concepts.py  config.py  crawl_task.py  crawler.py  embedder.py  featured_models.toml  frontmatter.py  ingest.py  languages.py  launcher.py  lock.py  mcp.py  model_defaults.py  model_info.py  model_manager.py  models.py  platform.py  preprocessors.py  progress.py  query.py  reasoning.py  registry.py  reranker.py  results.py  runtime.py  (+12 more)
src/lilbee/_vendor/: __init__.py
src/lilbee/cli/: __init__.py  _app.py  _chat.py  _commands.py  _helpers.py  app.py  browser.py  browser.tcss  chat.py  commands.py  helpers.py  model.py  models_cmd.py  settings_map.py  sync.py  theme.py
src/lilbee/providers/: __init__.py  base.py  factory.py  litellm_provider.py  llama_cpp_provider.py  model_cache.py  model_ref.py  routing_provider.py  worker_process.py
src/lilbee/server/: __init__.py  app.py  auth.py  handlers.py  litestar_app.py  models.py  wiki.py
src/lilbee/wiki/: __init__.py  browse.py  citation.py  gen.py  index.py  lint.py  prune.py  shared.py
tests/: conftest.py  test_accuracy.py  test_accuracy_code.py  test_accuracy_docs.py  test_api.py  test_browser.py  test_catalog.py  test_chat.py  test_chat_setup_detection.py  test_chat_wiki_controller_integration.py  test_chunker.py  test_citation.py  test_cli.py  test_cli_model.py  test_cli_models.py  test_cli_serve.py  test_cli_sync.py  test_clustering.py  test_concepts.py  test_config.py  test_controller_downloads.py  test_crawl_integration.py  test_crawl_task.py  test_crawler.py  test_download_progress.py  test_embedder.py  test_formats.py  test_frontmatter.py  test_helpers.py  test_ingest.py  test_kreuzberg_integration.py  test_llama_cpp_queue.py  test_lock.py  test_mcp.py  test_mcp_model_tools.py  test_model_cache.py  test_model_defaults.py  test_model_manager.py  test_model_ref.py  test_models.py  (+47 more)
tests/fixtures/code/: LinkedList.java  calculator.py  matrix.rs  stack.go  validator.ts
tests/fixtures/docs/: astronomy.txt  inventory.csv  manual.html  recipes.md  sample.json  sample.jsonl  sample.xml  sample.yaml
tests/integration/: conftest.py  test_catalog_integration.py  test_clusterer_integration.py  test_crawl_integration.py  test_download_progress_integration.py  test_interactive_integration.py  test_litellm_integration.py  test_pdf_integration.py  test_pipeline_integration.py  test_rag_integration.py  test_reranker_integration.py  test_tui_integration.py  test_wiki_integration.py
tests/server/: conftest.py  test_handlers.py  test_wiki_routes.py
vault/.obsidian/: community-plugins.json
vault/lilbee/: Welcome.md  lilbee for Obsidian.md
vault/lilbee/.obsidian/: community-plugins.json  workspace.json
vault/lilbee/lilbee/: chat-2026-03-15-035556.md  chat-2026-03-15-164652.md  chat-2026-03-15-165030.md  chat-2026-03-18-175943.md
(+623 files in other folders)
