[project]
name = "lilbee"
version = "0.3.1"
description = "Local RAG for the terminal. Drop files in a folder, ask questions, get answers. JSON API for coding agents."
readme = "README.md"
license = "MIT"
authors = [{ name = "tobocop2", email = "5562156+tobocop2@users.noreply.github.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "ollama",
    "lancedb",
    "kreuzberg",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.7",
    "typer",
    "tiktoken",
    "prompt-toolkit>=3.0",
    "mcp>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/tobocop2/lilbee"
Repository = "https://github.com/tobocop2/lilbee"
Issues = "https://github.com/tobocop2/lilbee/issues"

[project.scripts]
lilbee = "lilbee.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lilbee"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pexpect>=4.9.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "reportlab",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["lilbee"]
omit = ["src/lilbee/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
